--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
             },
             animation: {
               'float': 'float 6s ease-in-out infinite',
+              'fade-in-up': 'fadeInUp 0.8s ease-out forwards',
             },
             keyframes: {
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
                 '50%': { transform: 'translateY(-20px)' },
+              },
+              fadeInUp: {
+                '0%': { opacity: '0', transform: 'translateY(20px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
               }
             }
           }
@@ -60,7 +65,7 @@
 }
 </script>
   </head>
-  <body class="bg-cream text-dark-brown">
+  <body class="bg-cream text-dark-brown overflow-x-hidden">
     <div id="root"></div>
     <!-- Critical: Entry point script -->
     <script type="module" src="./index.tsx"></script>
