--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trinkets and Beyond</title>
+    <title>Trinkets and Beyond | Artisan Candles</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,800;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -22,26 +22,23 @@
               'sans': ['Inter', 'sans-serif'],
             },
             colors: {
-              'cream': '#FFF5F7',
+              'cream': '#FFFAF6',
               'warm-brown': '#5D4037',
-              'pink': '#E91E63',
-              'soft-pink': '#FCE4EC',
-              'rose': '#F48FB1',
-              'light-pink': '#F8BBD0',
-              'dark-brown': '#3E2723',
+              'pink': '#D81B60',
+              'soft-pink': '#FFF0F3',
+              'rose': '#F06292',
+              'gold': '#C5A059',
+              'dark-brown': '#2D1B17',
             },
             animation: {
-              'float': 'float 6s ease-in-out infinite',
-              'fade-in-up': 'fadeInUp 0.8s ease-out forwards',
+              'slow-ping': 'ping 3s cubic-bezier(0, 0, 0.2, 1) infinite',
+              'float-slow': 'float 8s ease-in-out infinite',
+              'spin-slow': 'spin 20s linear infinite',
             },
             keyframes: {
               float: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-20px)' },
-              },
-              fadeInUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
+                '0%, 100%': { transform: 'translateY(0) rotate(0deg)' },
+                '50%': { transform: 'translateY(-20px) rotate(2deg)' },
               }
             }
           }
@@ -52,8 +49,9 @@
 {
   "imports": {
     "react": "https://esm.sh/react@18.2.0",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
     "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.2.0,react-dom@18.2.0",
     "framer-motion": "https://esm.sh/framer-motion@11.0.8?deps=react@18.2.0,react-dom@18.2.0",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0?deps=react@18.2.0",
@@ -64,9 +62,8 @@
 }
 </script>
   </head>
-  <body class="bg-cream text-dark-brown overflow-x-hidden">
+  <body class="bg-cream text-dark-brown selection:bg-pink selection:text-white overflow-x-hidden">
     <div id="root"></div>
-    <!-- Critical: Entry point script -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
