--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,800;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -22,23 +22,38 @@
               'sans': ['Inter', 'sans-serif'],
             },
             colors: {
-              'cream': '#FFFAF6',
-              'warm-brown': '#5D4037',
-              'pink': '#D81B60',
-              'soft-pink': '#FFF0F3',
-              'rose': '#F06292',
+              'cream': '#FDFCFB',
+              'charcoal': '#1A1A1A',
               'gold': '#C5A059',
-              'dark-brown': '#2D1B17',
+              'rose': '#D4A3A3',
+              'muted-brown': '#5D5451',
+              'accent-pink': '#E29595',
             },
             animation: {
-              'slow-ping': 'ping 3s cubic-bezier(0, 0, 0.2, 1) infinite',
-              'float-slow': 'float 8s ease-in-out infinite',
-              'spin-slow': 'spin 20s linear infinite',
+              'float': 'float 6s ease-in-out infinite',
+              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'ember': 'ember 10s linear infinite',
+              'shimmer': 'shimmer 2.5s infinite linear',
+              'flicker': 'flicker 3s infinite ease-in-out',
             },
             keyframes: {
               float: {
-                '0%, 100%': { transform: 'translateY(0) rotate(0deg)' },
-                '50%': { transform: 'translateY(-20px) rotate(2deg)' },
+                '0%, 100%': { transform: 'translateY(0px) rotate(0deg)' },
+                '50%': { transform: 'translateY(-20px) rotate(1deg)' },
+              },
+              ember: {
+                '0%': { transform: 'translate(0, 0) opacity(0)', filter: 'blur(1px)' },
+                '20%': { opacity: '0.6' },
+                '80%': { opacity: '0.4' },
+                '100%': { transform: 'translate(-60px, -250px) opacity(0)', filter: 'blur(3px)' }
+              },
+              shimmer: {
+                '0%': { transform: 'translateX(-100%)' },
+                '100%': { transform: 'translateX(100%)' }
+              },
+              flicker: {
+                '0%, 100%': { opacity: 1, filter: 'brightness(1)' },
+                '50%': { opacity: 0.8, filter: 'brightness(1.2)' },
               }
             }
           }
@@ -49,25 +64,20 @@
 {
   "imports": {
     "react": "https://esm.sh/react@19",
+    "react/": "https://esm.sh/react@19/",
     "react/jsx-runtime": "https://esm.sh/react@19/jsx-runtime",
     "react-dom": "https://esm.sh/react-dom@19",
+    "react-dom/": "https://esm.sh/react-dom@19/",
     "react-dom/client": "https://esm.sh/react-dom@19/client",
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@19,react-dom@19",
     "framer-motion": "https://esm.sh/framer-motion@11.0.8?deps=react@19,react-dom@19",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0?deps=react@19",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7"
   }
 }
 </script>
-    <script type="module">
-      import React from 'https://esm.sh/react@19';
-      import ReactDOM from 'https://esm.sh/react-dom@19/client';
-      import { createRoot } from 'https://esm.sh/react-dom@19/client';
-    </script>
   </head>
-  <body class="bg-cream text-dark-brown selection:bg-pink selection:text-white overflow-x-hidden">
+  <body class="bg-cream text-charcoal selection:bg-rose selection:text-white overflow-x-hidden antialiased">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
